# KJCLIController

./: .gitignore  ANNOUNCEMENT.md  Cargo.toml  PLAN.md  README.md  WALKTHROUGH.md  config.example.json
.github/workflows/: build-release.yml  pages.yml
orchestration/: AGENTS.md  CLAUDE.md  GEMINI.md  ORCHESTRATION.md
skills/: consult-local-clis.skill
skills/consult-local-clis/: SKILL.md
skills/consult-local-clis/scripts/: consult.py
src/: auth.rs  config.rs  main.rs  registry.rs  tray.rs
src/cli/: claude.rs  codex.rs  gemini.rs  mod.rs  resolve.rs  validate.rs
static/: agents.md  app.js  guide.html  index.html  landing.html  style.css
