[package]
name = "clicontroller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"
base64 = "0.21"
rust-embed = "8.3"
tracing-appender = "0.2"

# System-tray support is Windows-only so the Linux/macOS release builds stay
# free of GTK/libappindicator system dependencies.
[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"
tao = "0.30"
winreg = "0.52"

